Diesel Postgres sql

--- a/crates/crate_diesel_ormless_quickstart/sample.env
+++ b/crates/crate_diesel_ormless_quickstart/sample.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgresql://neondb_owner:12340@asdf.us-west-2.aws.neon.tech/neondb?sslmode=require"
+# asdf = endpoint id, 2 places in connection string
+DATABASE_URL="postgresql://neondb_owner:12340@asdf.us-west-2.aws.neon.tech/neondb?sslmode=require&options=endpoint%3asdf"
