--- a/crate_diesel_orm_quickstart/Cargo.toml
+++ b/crate_diesel_orm_quickstart/Cargo.toml
@@ -8,4 +8,6 @@ diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
- 
+chrono = "0.4"
+uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
+rand = "0.8"
