--- a/crates/crate_axum_oauth/Cargo.toml
+++ b/crates/crate_axum_oauth/Cargo.toml
@@ -13,12 +13,13 @@ dotenv = "0.15.0"
 http = "1.0.0"
 oauth2 = "4.1"
 # Use Rustls because it makes it easier to cross-compile on CI
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
+reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 urlencoding = "2.0.0"
+url = "2.2.2"
 
 [[bin]]
 name = "axum_oauth"
