reduced size of container

--- a/crates/crate_001_hello_world_with_cargo_docker/Dockerfile
+++ b/crates/crate_001_hello_world_with_cargo_docker/Dockerfile
@@ -2,25 +2,32 @@
 # docker build --no-cache -t helloworld:latest .
 # docker run --rm --name helloworld1 helloworld
 
-# Rust as the base image
-FROM rust
+FROM rust as build
 
-# 1. Create a new empty shell project
+# create a new empty shell project
 RUN USER=root cargo new --bin helloworld
 WORKDIR /helloworld
 
-# 2. Copy our manifests
+# copy over your manifests
 COPY ./Cargo* .
 
-# 3. Build only the dependencies to cache them
+# this build step will cache your dependencies
 RUN cargo build --release
 RUN rm src/*.rs
 
-# 4. Now that the dependency is built, copy your source code
+# copy your source tree
 COPY ./src ./src
 
-# 5. Build for release.
+# build for release
 RUN rm ./target/release/deps/helloworld*
-RUN cargo install --path .
+RUN cargo build --release
 
-CMD ["helloworld"]
+#--------------------------------------------------------------
+# our final base
+FROM rust
+
+# copy the build artifact from the build stage
+COPY --from=build /helloworld/target/release/helloworld .
+
+# set the startup command to run your binary
+CMD ["./helloworld"]
