mongo crud crate works

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
 		3000,
 		3005,
 		4000,
-		5432
+		5432,
+		8085 // mongo express web ui
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
