--- a/crates/crate_mongodb_crud/Cargo.toml
+++ b/crates/crate_mongodb_crud/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2021"
 publish = false
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 bson = "2.9.0"
+chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
-futures-io = "0.3.21"
-futures-core = "0.3.14"
-futures-util = { version = "0.3.14", features = ["io"] }
-futures-executor = "0.3.14"
 futures = "0.3"
-chrono = "0.4.34"
+futures-core = "0.3.14"
+futures-executor = "0.3.14"
+futures-io = "0.3.21"
+futures-util = { version = "0.3.14", features = ["io"] }
 mongodb = "3.1.1"
 rand = "0.8.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.0", features = ["full"] }
