--- a/crates/crate-postgres-diesel-hello-world/Cargo.toml
+++ b/crates/crate-postgres-diesel-hello-world/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "crate-postgres-crud-jsonb-lib"
+name = "crate-postgres-diesel-hello-world"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
+diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid"] }
 dotenvy = "0.15.0"
 pq-sys = "0.6.1"
 serde = { version = "1.0", features = ["derive"] }
