--- a/crates/crate-postgres-diesel-axum-pool/Cargo.toml
+++ b/crates/crate-postgres-diesel-axum-pool/Cargo.toml
@@ -10,6 +10,7 @@ axum-extra = { version = "0.9.3", features = ["typed-header"] }
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid", "r2d2"] }
 dotenvy = "0.15.0"
+futures = "0.3.31"
 pq-sys = "0.6.1"
 rand = "0.8"
 serde = { version = "1.0.208", features = ["derive"] }
@@ -17,6 +18,9 @@ serde_derive = "1.0.209"
 serde_json = "1.0.127"
 tokio = { version = "1.0", features = ["full"] }
 tower = "0.5.0"
+tower-http = { version = "0.6.2", features = ["cors", "catch-panic", "sensitive-headers"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+url = "2.5.4"
+urlencoding = "2.1.3"
 uuid = { version = "1.10.0", features = ["v4","fast-rng", "serde"] }
