comparing diesel and seaorm for stress tests

--- a/crates/crate_axum_seaorm_example/Cargo.toml
+++ b/crates/crate_axum_seaorm_example/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Yoshiera Huang <huangjasper@126.com>"]
 edition = "2021"
 publish = false
 
-[workspace]
-members = [".", "api", "service", "entity", "migration"]
+#[workspace]
+#members = [".", "api", "service", "entity", "migration"]
 
 [dependencies]
 axum-api = { path = "api" }
