--- a/crates/crate-postgres-diesel-axum-pool/Cargo.toml
+++ b/crates/crate-postgres-diesel-axum-pool/Cargo.toml
@@ -18,7 +18,7 @@ tokio = { version = "1.0", features = ["full"] }
 tower = "0.5.0"
 tower-http = { version = "0.6.2", features = ["cors", "catch-panic", "sensitive-headers"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.4"
 urlencoding = "2.1.3"
 uuid = { version = "1.10.0", features = ["v4","fast-rng", "serde"] }
