--- a/crates/crate_axum_seaorm_example/api/Cargo.toml
+++ b/crates/crate_axum_seaorm_example/api/Cargo.toml
@@ -20,3 +20,8 @@ tera = "1.19.1"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 entity = { path = "../entity" }
 migration = { path = "../migration" }
+tracing = "0.1.26"
+
+[dependencies.sea-orm]
+version = "1.1.0"
+features = ["debug-print"]
