--- a/crates/crate_axum_middleware_auth_automation/Cargo.toml
+++ b/crates/crate_axum_middleware_auth_automation/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "axum-async-diesel-example"
+name = "crate_axum_middleware_auth_automation"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 axum = { version = "0.7.5", features = ["macros"] }
-bb8 = "0.8"
-diesel = "2"
-diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
-dotenvy = "0.15"
+axum-extra = { version = "0.9.6", features = ["typed-header"] }
+jsonwebtoken = "8.0"
+once_cell = "1.8"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
